--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ repository               : "WeiHua363/WeiHua363.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/证件照.png"
-  name             : "Hua Wei"
+  avatar           : "../images/证件照.png"
+  name             : "Hua Wei（魏华）"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. student of Peking University"
   location         : "Beijing, China"
