--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ repository               : "WeiHua363/WeiHua363.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/wh.png"
+  avatar           : "../images/wh.png"
   name             : "Hua Wei（魏华）"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. student of Peking University"
   location         : "Beijing, China"
   employer         : #"Red Brick University"
   uri              : #
-  email            : "weihua25@@stu.pku.edu.cn" 
+  email            : "weihua25@stu.pku.edu.cn" 
 
   # Academic websites
   academia         : # URL
